# fastapi_migrate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pylint.yml
core/: cli.py
core/templates/fastapi/: env.py
fastapi_migrate/: main.py
fastapi_migrate/templates/fastapi/: alembic.ini.mako
migrations/: __main__.py  cli.py  main.py
migrations/templates/fastapi/: README
