[build-system]
requires = ["wheel"]

[tool.flit.metadata]
module = "fastapi_migrate"
author = "Thomas Saied"
author-email = "thomas.adel31@gmail.com"
home-page = "https://github.com/thomas545/fastapi_migrate"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License"
    ]
requires = [
    "fastapi >= 0.78.0",
    "SQLAlchemy >= 1.4.37",
    "alembic >= 1.8.0",
    "typer >= 0.4.1",
]
description-file = "README.md"
requires-python = ">=3.6"

[tool.flit.metadata.urls]
Documentation = "https://github.com/thomas545/fastapi_migrate"

[tool.flit.metadata.requires-extra]
test = [
    "shellingham >=1.3.0,<2.0.0",
    "pytest >=4.4.0,<5.4.0",
    "pytest-cov >=2.10.0,<3.0.0",
    "coverage >=5.2,<6.0",
    "pytest-xdist >=1.32.0,<2.0.0",
    "pytest-sugar >=0.9.4,<0.10.0",
    "mypy ==0.910",
    "black >=22.3.0,<23.0.0",
    "isort >=5.0.6,<6.0.0"
]
doc = [
    "mkdocs >=1.1.2,<2.0.0",
    "mkdocs-material >=8.1.4,<9.0.0",
    "mdx-include >=1.4.1,<2.0.0",
]
dev = [
    "autoflake >=1.3.1,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "pre-commit >=2.17.0,<3.0.0",
]

[tool.isort]
profile = "black"
