[metadata]
name = fastapi_migrate
version = 1.0.0
author = Thomas Saied
author_email = thomas.adel31@gmail.com
description = SQLAlchemy database migrations for FastAPI applications using Alembic.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/thomas545/fastapi_migrate
project_urls =
    Bug Tracker = https://github.com/thomas545/fastapi_migrate/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = migrations
packages = find:
python_requires = >=3.6
install_requires =
    fastapi >= 0.78.0
    SQLAlchemy >= 1.4.37
    alembic >= 1.8.0

[options.packages.find]
where = migrations

[options.entry_points]
commands =
    init = fastmigrate init
